postgres-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
      name: postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
