postgres-server/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ad-hoc-analytics-postgres-ingress
spec:
  ingressClassName: nginx
  type: ClusterIP
  rules:
  - host: postgres.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: postgres
            port:
              number: 5432
